apptest removed tostring